Implement view public trip template API